[Angelos] Huge refactor from stale Formula to FormulaAST - Fixed errors - Added all missing methods to FormulaAST - Integrated the new workflows to the codebase. - Project & Tests Compile fine #491